# smart-pandas

./: .gitignore  README.md  pyproject.toml
.github/workflows/: project_checks.yml
docs/: data_config_guide.md  state.md  tags.md
docs/images/: data_flow.drawio
examples/: basic_example.ipynb  example.ipynb  example.py  example_config.yaml  schema_example.py  titanic_config.yaml  titanic_example.ipynb
examples/.ipynb_checkpoints/: example-checkpoint.ipynb
smart_pandas/: __init__.py  column.py  column_set.py  config_reader.py  config_utils.py  data_attributes.py  data_config.py  dataframe.py  label.py  label_set.py  schema.py  schema_utils.py  smart_pandas.py  state.py  tag.py  tag_set.py
smart_pandas/config/: column.py  column_set.py  config_utils.py  data_config.py  tag.py  tag_set.py  validation_exceptions.py
tests/: conftest.py  example_config.yaml  test_config.py  test_config_validation.py  test_label.py  test_smart_pandas.py  test_state.py  test_tag.py
tests/example_configs/: duplicate_col_config.yaml  empty_col_config.yaml  example_config.yaml  tag_compatibility_error_config.yaml  tag_limit_exceeded_config.yaml
