[project]
name = "smart-pandas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "pydantic>=2.9.2",
    "pyyaml>=6.0.2",
    "pandera[io]>=0.20.4",
    "scikit-learn>=1.7.0",
]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.7.1",
    "ipykernel>=6.29.5",
    "scikit-learn>=1.7.0",
    "catboost>=1.2.8",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.setuptools]
packages = ["smart_pandas"]
